@@ -4,6 +4,9 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/).
 
 ## [Unreleased]
 
+### Fixed
+- update_reservated 에서 결제대기 주문서도 허용
+
 ## [v0.1.0] - Wed, 20 Sep 2017 13:30:58 +0900
 
 ### Changed
